--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,3 +1,14 @@
+<% 
+        function isTimeBetween7AMand6AM(currentTime) {
+          let currentHour = currentTime.getHours();
+          if (currentHour >= 6 && currentHour < 18) {
+            return true;
+          } else {
+            return false;
+          }
+        }  
+%>
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -49,7 +60,7 @@
               </div>
               
               <div id="temp-icon">
-                <% if (currentDescriptionId == 800) { if (isBetween7to6) {
+                <% if (currentDescriptionId == 800) { if (isTimeBetween7AMand6AM(new Date())) {
                 %>
                 <img
                   src="/images/weather_icons/clear_sky_800/clear_sun.svg"
@@ -59,7 +70,7 @@
                   src="/images/weather_icons/clear_sky_800/clear_moon.svg"
                   alt="Clear sky during nighttime"/>
                 <% } } else if (currentDescriptionId >= 800 &&
-                currentDescriptionId <= 899) {  if (isBetween7to6) { %>
+                currentDescriptionId <= 899) {  if (isTimeBetween7AMand6AM(new Date())) { %>
                 <img
                   src="/images/weather_icons/clouds_80x/cloud_sun.svg"
                   alt="Cloudy daytime"/>
@@ -68,7 +79,7 @@
                   src="/images/weather_icons/clouds_80x/cloud_moon.svg"
                   alt="Cloudy nighttime"/>
                 <% }  } else if (currentDescriptionId >= 700 &&
-                currentDescriptionId <= 799) {  if (isBetween7to6) { %>
+                currentDescriptionId <= 799) {  if (isTimeBetween7AMand6AM(new Date())) { %>
                 <img
                   src="/images/weather_icons/mist_7xx/mist.svg"
                   alt="Misty daytime"/>
@@ -125,17 +136,17 @@
               </div>
               <div class="timeline-icon">
                 <% if (tl[index].weather[0].id == 800) {  if
-                (isBetween7to6) { %>
+                (isTimeBetween7AMand6AM(new Date())) { %>
                 <img src="/images/weather_icons/clear_sky_800/clear_sun.svg" alt="Clear sky during daytime"/>
                 <% } else { %>
                 <img src="/images/weather_icons/clear_sky_800/clear_moon.svg" alt="Clear sky during nighttime"/>
                 <% }  } else if (tl[index].weather[0].id >= 800 &&
-                tl[index].weather[0].id <= 899) {  if (isBetween7to6) { %>
+                tl[index].weather[0].id <= 899) {  if (isTimeBetween7AMand6AM(new Date())) { %>
                 <img src="/images/weather_icons/clouds_80x/cloud_sun.svg" alt="Cloudy daytime"/>
                 <% } else { %>
                 <img src="/images/weather_icons/clouds_80x/cloud_moon.svg" alt="Cloudy nighttime"/>
                 <% }  } else if (tl[index].weather[0].id >= 700 &&
-                tl[index].weather[0].id <= 799) {  if (isBetween7to6) { %>
+                tl[index].weather[0].id <= 799) {  if (isTimeBetween7AMand6AM(new Date())) { %>
                 <img src="/images/weather_icons/mist_7xx/mist.svg" alt="Misty daytime" />
                 <% } else { %>
                 <img src="/images/weather_icons/mist_7xx/mist.svg" alt="Misty nighttime" />
@@ -171,7 +182,7 @@
               <div class="forecast-card-wrapper">
                 <div class="date"><%= days.dt_txt.slice(0, 11) %></div>
                 <div id="forecast-icon">
-                  <% if (days.weather[0].id == 800) { if (isBetween7to6) {
+                  <% if (days.weather[0].id == 800) { if (isTimeBetween7AMand6AM(new Date())) {
                   %>
                   <img
                     src="/images/weather_icons/clear_sky_800/clear_sun.svg"
@@ -183,7 +194,7 @@
                     alt="Clear sky during nighttime"
                   />
                   <% } } else if (days.weather[0].id >= 800 &&
-                  days.weather[0].id <= 899) { if (isBetween7to6) { %>
+                  days.weather[0].id <= 899) { if (isTimeBetween7AMand6AM(new Date())) { %>
                   <img
                     src="/images/weather_icons/clouds_80x/cloud_sun.svg"
                     alt="Cloudy daytime"
@@ -194,7 +205,7 @@
                     alt="Cloudy nighttime"
                   />
                   <% } } else if (days.weather[0].id >= 700 &&
-                  days.weather[0].id <= 799) { if (isBetween7to6) { %>
+                  days.weather[0].id <= 799) { if (isTimeBetween7AMand6AM(new Date())) { %>
                   <img
                     src="/images/weather_icons/mist_7xx/mist.svg"
                     alt="Misty daytime"
@@ -239,6 +250,6 @@
         </section>
       </div>
     </section>
-    <%- include('background.ejs') %> 
+    <%- include('background.ejs') %>  
   </body>
 </html>
